# DuctZip

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  MARKET_RESEARCH.md  PRD.md  ROADMAP.md
src/ductzip/: __init__.py  cli.py
src/ductzip/archive/: __init__.py  errors.py  sevenzip.py
src/ductzip/gui/: __init__.py  app.py
tests/: test_cli.py  test_gui.py
