[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ductzip"
version = "0.1.0"
description = "A lightweight Windows archive extraction tool."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []
keywords = ["archive", "7zip", "cli", "windows", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Archiving",
]

[project.scripts]
ductzip = "ductzip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
